Added margin, version 1.1.0

--- a/RadioButtonListView/RadioButtonListView.csproj
+++ b/RadioButtonListView/RadioButtonListView.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>RadioButtonListView</PackageId>
-        <Version>1.0.0</Version>
-        <Authors>your_name</Authors>
-        <Company>your_company</Company>
+        <Version>1.1.0</Version>
+        <Authors>herocod3r</Authors>
+        <Company>Jetcipher</Company>
+        <Description>A simple xamarin forms plugin that implements a radio button</Description>
         <RepositoryUrl>https://github.com/Herocod3r/RadioButtonListView.git</RepositoryUrl>
   </PropertyGroup>
 
